fix button spacing

--- a/src/styles/controls/buttons.scss
+++ b/src/styles/controls/buttons.scss
@@ -4,7 +4,7 @@
 
   display: inline-flex;
   background: var(--main-color);
-  padding: var(--spacing-sm) var(--spacing-lg);
+  padding: var(--spacing-sm) var(--spacing-xl);
   color: #fff;
   text-align: center;
   cursor: pointer;
